--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -1,6 +1,7 @@
 load(
     "@com_google_googleapis_imports//:imports.bzl",
     "proto_library_with_info",
+    java_gapic_assembly_gradle_pkg = "java_gapic_assembly_gradle_pkg2",
     java_gapic_library = "java_gapic_library2",
 )
 load(
@@ -86,18 +87,13 @@ java_gapic_library(
     ],
 )
 
-# Logging API
-java_gapic_library(
-    name = "redis_java_gapic",
-    srcs = ["redis_proto_with_info"],
-    grpc_service_config = "@com_google_googleapis//google/cloud/redis/v1:redis_grpc_service_config.json",
-    package = "google.cloud.redis.v1",
-    service_yaml = "@com_google_googleapis//google/cloud/redis/v1:redis_v1.yaml",
-    test_deps = [
-        "@com_google_googleapis//google/cloud/redis/v1:redis_java_grpc",
-    ],
+java_gapic_assembly_gradle_pkg(
+    name = "google-cloud-redis-v1-java",
     deps = [
+        ":redis_java_gapic",
+        "@com_google_googleapis//google/cloud/redis/v1:redis_java_grpc",
         "@com_google_googleapis//google/cloud/redis/v1:redis_java_proto",
+        "@com_google_googleapis//google/cloud/redis/v1:redis_proto",
     ],
 )
 
