--- a/gapic-generator-java/.circleci/config.yml
+++ b/gapic-generator-java/.circleci/config.yml
@@ -35,6 +35,14 @@ jobs:
             cd /tmp/gapic-generator-java
             bazel --batch test //src/test/... --noshow_progress
             find . -type f -regex ".*/bazel-testlogs/.*xml" -exec cp {} ${TEST_REPORTS_DIR} \;
+      - run:
+          name: Run integration tests for gapic-generator-java
+          command: |
+            cd /tmp/gapic-generator-java
+            # Check only the goldens, rely on the pre-commits for client library compilation tests.
+            # Otherwise, this would take too long.
+            bazel --batch test //test/integration:asset //test/integration:logging //test/integration:redis --noshow_progress
+            find . -type f -regex ".*/bazel-testlogs/.*xml" -exec cp {} ${TEST_REPORTS_DIR} \;
       - store_test_results:
           path: ~/.cache/bazel
   google-java-format:
