--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -111,6 +111,7 @@ java_gapic_assembly_gradle_pkg(
 java_gapic_library(
     name = "logging_java_gapic",
     srcs = ["@com_google_googleapis//google/logging/v2:logging_proto_with_info"],
+    gapic_yaml = "@com_google_googleapis//google/logging/v2:logging_gapic.yaml",
     grpc_service_config = "@com_google_googleapis//google/logging/v2:logging_grpc_service_config.json",
     package = "google.logging.v2",
     service_yaml = "@com_google_googleapis//google/logging/v2:logging.yaml",
