--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -3,6 +3,7 @@ load(
     "proto_library_with_info",
     java_gapic_assembly_gradle_pkg = "java_gapic_assembly_gradle_pkg2",
     java_gapic_library = "java_gapic_library2",
+    java_gapic_test = "java_gapic_test2",
 )
 load(
     "//:rules_bazel/java/integration_test.bzl",
@@ -58,6 +59,14 @@ java_gapic_library(
     ],
 )
 
+java_gapic_test(
+    name = "asset_java_gapic_test_suite",
+    test_classes = [
+        "com.google.cloud.asset.v1.AssetServiceClientTest",
+    ],
+    runtime_deps = [":asset_java_gapic_test"],
+)
+
 java_gapic_assembly_gradle_pkg(
     name = "google-cloud-asset-v1-java",
     deps = [
@@ -96,6 +105,14 @@ java_gapic_library(
     ],
 )
 
+java_gapic_test(
+    name = "redis_java_gapic_test_suite",
+    test_classes = [
+        "com.google.cloud.redis.v1.CloudRedisClientTest",
+    ],
+    runtime_deps = [":redis_java_gapic_test"],
+)
+
 java_gapic_assembly_gradle_pkg(
     name = "google-cloud-redis-v1-java",
     deps = [
@@ -119,6 +136,16 @@ java_gapic_library(
         "@com_google_googleapis//google/api:api_java_proto",
         "@com_google_googleapis//google/logging/v2:logging_java_proto",
     ],
+)
+
+java_gapic_test(
+    name = "logging_java_gapic_test_suite",
+    test_classes = [
+        "com.google.logging.v2.ConfigServiceV2ClientTest",
+        "com.google.logging.v2.LoggingServiceV2ClientTest",
+        "com.google.logging.v2.MetricsServiceV2ClientTest",
+    ],
+    runtime_deps = [":logging_java_gapic_test"],
 )
 
 java_gapic_assembly_gradle_pkg(
