--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -83,6 +83,7 @@ java_gapic_assembly_gradle_pkg(
 java_gapic_library(
     name = "redis_java_gapic",
     srcs = ["@com_google_googleapis//google/cloud/redis/v1:redis_proto_with_info"],
+    gapic_yaml = "@com_google_googleapis//google/cloud/redis/v1:redis_gapic.yaml",
     grpc_service_config = "@com_google_googleapis//google/cloud/redis/v1:redis_grpc_service_config.json",
     package = "google.cloud.redis.v1",
     test_deps = [
