--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -18,6 +18,7 @@ package(default_visibility = ["//visibility:public"])
 
 INTEGRATION_TEST_LIBRARIES = [
     "asset",
+    "credentials",
     "logging",
     "redis",
     "library",  # No gRPC service config.
@@ -178,5 +179,39 @@ java_gapic_assembly_gradle_pkg(
         "@com_google_googleapis//google/example/library/v1:library_java_grpc",
         "@com_google_googleapis//google/example/library/v1:library_java_proto",
         "@com_google_googleapis//google/example/library/v1:library_proto",
+    ],
+)
+
+# IAMCredentials.
+# Check that the capital name edge case is handled.
+java_gapic_library(
+    name = "credentials_java_gapic",
+    srcs = ["@com_google_googleapis//google/iam/credentials/v1:credentials_proto_with_info"],
+    grpc_service_config = "@com_google_googleapis//google/iam/credentials/v1:iamcredentials_grpc_service_config.json",
+    package = "google.iam.credentials.v1",
+    test_deps = [
+        "@com_google_googleapis//google/iam/credentials/v1:credentials_java_grpc",
+    ],
+    deps = [
+        "@com_google_googleapis//google/iam/credentials/v1:credentials_java_proto",
+    ],
+)
+
+java_gapic_test(
+    name = "credentials_java_gapic_test_suite",
+    test_classes = [
+        "com.google.cloud.iam.credentials.v1.IamCredentialsClientTest",
+    ],
+    runtime_deps = [":credentials_java_gapic_test"],
+)
+
+# Open Source Packages
+java_gapic_assembly_gradle_pkg(
+    name = "google-cloud-iam-credentials-v1-java",
+    deps = [
+        ":credentials_java_gapic",
+        "@com_google_googleapis//google/iam/credentials/v1:credentials_java_grpc",
+        "@com_google_googleapis//google/iam/credentials/v1:credentials_java_proto",
+        "@com_google_googleapis//google/iam/credentials/v1:credentials_proto",
     ],
 )
