--- a/src/main/java/com/google/api/generator/gapic/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/BUILD.bazel
@@ -6,6 +6,7 @@ filegroup(
     name = "gapic_files",
     srcs = glob(["*.java"]) + [
         "//src/main/java/com/google/api/generator/gapic/composer:composer_files",
+        "//src/main/java/com/google/api/generator/gapic/composer/comment:comment_files",
         "//src/main/java/com/google/api/generator/gapic/composer/samplecode:samplecode_files",
         "//src/main/java/com/google/api/generator/gapic/composer/store:store_files",
         "//src/main/java/com/google/api/generator/gapic/model:model_files",
