--- a/src/main/java/com/google/api/generator/gapic/composer/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/composer/BUILD.bazel
@@ -17,8 +17,10 @@ java_library(
         "//src/main/java/com/google/api/generator/engine/ast",
         "//src/main/java/com/google/api/generator/engine/writer",
         "//src/main/java/com/google/api/generator/gapic:status_java_proto",
+        "//src/main/java/com/google/api/generator/gapic/composer/comment",
         "//src/main/java/com/google/api/generator/gapic/composer/samplecode",
         "//src/main/java/com/google/api/generator/gapic/composer/store",
+        "//src/main/java/com/google/api/generator/gapic/composer/utils",
         "//src/main/java/com/google/api/generator/gapic/model",
         "//src/main/java/com/google/api/generator/gapic/utils",
         "@com_google_api_api_common//jar",
