--- a/src/main/java/com/google/api/generator/gapic/composer/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/composer/BUILD.bazel
@@ -23,6 +23,7 @@ java_library(
         "//src/main/java/com/google/api/generator/gapic/composer/utils",
         "//src/main/java/com/google/api/generator/gapic/model",
         "//src/main/java/com/google/api/generator/gapic/utils",
+        "//src/main/java/com/google/api/generator/util",
         "@com_google_api_api_common//jar",
         "@com_google_api_gax_java//gax",
         "@com_google_api_gax_java//gax-grpc:gax_grpc",
