--- a/gapic-generator-java/src/main/java/com/google/api/generator/BUILD.bazel
+++ b/gapic-generator-java/src/main/java/com/google/api/generator/BUILD.bazel
@@ -37,6 +37,7 @@ java_library(
         "//src/main/java/com/google/api/generator/engine/ast",
         "//src/main/java/com/google/api/generator/gapic",
         "//src/main/java/com/google/api/generator/gapic/model",
+        "//src/main/java/com/google/api/generator/util",
         "@com_google_googleapis//google/api:api_java_proto",
         "@com_google_googleapis//google/longrunning:longrunning_java_proto",
         "@com_google_guava_guava//jar",
