--- a/gapic-generator-java/src/test/java/com/google/api/generator/util/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/util/BUILD.bazel
@@ -17,6 +17,7 @@ filegroup(
     test_class = "com.google.api.generator.util.{0}".format(test_name),
     deps = [
         "//src/main/java/com/google/api/generator/util",
+        "//src/test/java/com/google/api/generator/testutils",
         "@com_google_guava_guava//jar",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
