--- a/src/test/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
@@ -5,6 +5,7 @@ package(default_visibility = ["//visibility:public"])
 TESTS = [
     "SampleCodeJavaFormatterTest",
     "SampleCodeWriterTest",
+    "ServiceClientSampleCodeComposerTest",
 ]
 
 filegroup(
@@ -21,8 +22,13 @@ filegroup(
         "//src/main/java/com/google/api/generator/engine/writer",
         "//src/main/java/com/google/api/generator/gapic/composer/samplecode",
         "//src/main/java/com/google/api/generator/gapic/model",
+        "//src/main/java/com/google/api/generator/gapic/protoparser",
+        "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
         "//src/test/java/com/google/api/generator/testutils",
+        "@com_google_api_api_common//jar",
         "@com_google_api_gax_java//gax",
+        "@com_google_googleapis//google/rpc:rpc_java_proto",
+        "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
     ],
