--- a/src/test/java/com/google/api/generator/engine/writer/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/engine/writer/BUILD.bazel
@@ -22,6 +22,7 @@ filegroup(
         "//src/test/java/com/google/api/generator/testutils",
         "@com_google_guava_guava//jar",
         "@com_google_truth_truth//jar",
+        "@javax_annotation_javax_annotation_api",
         "@junit_junit//jar",
     ],
 ) for test_name in TESTS]
