--- a/gapic-generator-java/src/main/java/com/google/api/generator/gapic/composer/BUILD.bazel
+++ b/gapic-generator-java/src/main/java/com/google/api/generator/gapic/composer/BUILD.bazel
@@ -18,6 +18,8 @@ java_library(
         "//src/main/java/com/google/api/generator/engine/writer",
         "//src/main/java/com/google/api/generator/gapic:status_java_proto",
         "//src/main/java/com/google/api/generator/gapic/composer/comment",
+        "//src/main/java/com/google/api/generator/gapic/composer/defaultvalue",
+        "//src/main/java/com/google/api/generator/gapic/composer/resourcename",
         "//src/main/java/com/google/api/generator/gapic/composer/samplecode",
         "//src/main/java/com/google/api/generator/gapic/composer/store",
         "//src/main/java/com/google/api/generator/gapic/composer/utils",
