--- a/src/test/java/com/google/api/generator/gapic/composer/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/BUILD.bazel
@@ -19,7 +19,6 @@ UPDATE_GOLDENS_TESTS = [
 
 TESTS = UPDATE_GOLDENS_TESTS + [
     "RetrySettingsComposerTest",
-    "ServiceClientSampleCodeComposerTest",
 ]
 
 TEST_DEPS = [
@@ -38,6 +37,7 @@ TEST_DEPS = [
     "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
     "//src/test/java/com/google/api/generator/gapic/testdata:testgapic_java_proto",
     "//src/test/java/com/google/api/generator/gapic/composer/constants",
+    "@com_google_api_api_common//jar",
     "@com_google_api_gax_java//gax",
     "@com_google_api_api_common",
     "@com_google_googleapis//google/logging/v2:logging_java_proto",
