--- a/gapic-generator-java/src/main/java/com/google/api/generator/gapic/composer/utils/BUILD.bazel
+++ b/gapic-generator-java/src/main/java/com/google/api/generator/gapic/composer/utils/BUILD.bazel
@@ -14,5 +14,6 @@ java_library(
     ],
     deps = [
         "//src/main/java/com/google/api/generator/gapic/model",
+        "@com_google_guava_guava//jar",
     ],
 )
