--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -81,32 +81,32 @@ java_gapic_assembly_gradle_pkg(
 # Redis API.
 java_gapic_library(
     name = "redis_java_gapic",
-    srcs = ["@com_google_googleapis//google/cloud/redis/v1:redis_proto_with_info"],
-    gapic_yaml = "@com_google_googleapis//google/cloud/redis/v1:redis_gapic.yaml",
-    grpc_service_config = "@com_google_googleapis//google/cloud/redis/v1:redis_grpc_service_config.json",
+    srcs = ["@com_google_googleapis//google/cloud/redis/v1beta1:redis_proto_with_info"],
+    gapic_yaml = "@com_google_googleapis//google/cloud/redis/v1beta1:redis_gapic.yaml",
+    grpc_service_config = "@com_google_googleapis//google/cloud/redis/v1beta1:redis_grpc_service_config.json",
     test_deps = [
-        "@com_google_googleapis//google/cloud/redis/v1:redis_java_grpc",
+        "@com_google_googleapis//google/cloud/redis/v1beta1:redis_java_grpc",
     ],
     deps = [
-        "@com_google_googleapis//google/cloud/redis/v1:redis_java_proto",
+        "@com_google_googleapis//google/cloud/redis/v1beta1:redis_java_proto",
     ],
 )
 
 java_gapic_test(
     name = "redis_java_gapic_test_suite",
     test_classes = [
-        "com.google.cloud.redis.v1.CloudRedisClientTest",
+        "com.google.cloud.redis.v1beta1.CloudRedisClientTest",
     ],
     runtime_deps = [":redis_java_gapic_test"],
 )
 
 java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-redis-v1-java",
+    name = "google-cloud-redis-v1beta1-java",
     deps = [
         ":redis_java_gapic",
-        "@com_google_googleapis//google/cloud/redis/v1:redis_java_grpc",
-        "@com_google_googleapis//google/cloud/redis/v1:redis_java_proto",
-        "@com_google_googleapis//google/cloud/redis/v1:redis_proto",
+        "@com_google_googleapis//google/cloud/redis/v1beta1:redis_java_grpc",
+        "@com_google_googleapis//google/cloud/redis/v1beta1:redis_java_proto",
+        "@com_google_googleapis//google/cloud/redis/v1beta1:redis_proto",
     ],
 )
 
